Lots of i18n fixes

--- a/logicle/locales/it/common.json
+++ b/logicle/locales/it/common.json
@@ -1,50 +1,53 @@
 {
   "account-info": "Dettagli Account",
-  "account-successfully-updated": "Account aggiornato con successo",
+  "account-successfully-updated": "Account modificato con successo",
   "acs-url": "URL ACS",
   "action": "Azione",
   "active": "Attivo",
+  "active-tools": "Tool attivi",
   "add-connection": "Aggiungi Connessione",
   "add-members": "Aggiungi Membri",
   "add-user": "Aggiungi Utente",
+  "admin": "Amministratore",
   "administrator-settings": "Impostazioni Amministratore",
   "all-assistants": "Assistenti",
   "all-backends": "Backends",
   "all-products": "Tutti i Prodotti",
   "all-samlconnections": "Connessioni SSO",
-  "all-tools": "Strumenti",
+  "all-tools": "Tools",
   "all-users": "Utenti",
   "all-workspaces": "Workspace",
   "allow-only-work-email": "Per favore usa la tua email aziendale per creare un account.",
   "allow-workspace": "Consenti ai membri del workspace di accedere utilizzando un Identity Provider.",
   "already-have-an-account": "Hai già un account?",
-  "analytics": "Analisi",
+  "analytics": "Statistiche uso",
   "anthropic-backend": "API Antropiche",
   "api_endpoint_placeholder": "Inserisci il tuo endpoint API",
-  "api_key_placeholder": "Inserisci la chiave API per accedere alle API LLM",
-  "api-key": "Chiave API",
-  "api-keys": "Chiavi API",
-  "apikey-added": "Chiave API aggiunta con successo",
-  "apikey-created": "Chiave API creata",
-  "apikey-deleted": "Chiave API eliminata con successo",
-  "apikey-delete-confirm": "Elimina Chiave API",
-  "apikey-delete-warning": "Eliminare una chiave API interromperà tutti i servizi che la utilizzano. Questa azione non può essere annullata.",
-  "apikey-description-placeholder": "Descrizione facile da ricordare della Chiave API...",
-  "apikey-wont-be-able-to-see-again": "Non potrai vedere di nuovo questa chiave API. Salvala in un luogo sicuro, come un gestore di password o un archivio segreto.",
+  "api_key_placeholder": "Inserisci l' API key per accedere alle API LLM",
+  "api-key": "API key",
+  "api-keys": "API key",
+  "apikey-added": "API key aggiunta con successo",
+  "apikey-created": "API key creata",
+  "apikey-deleted": "API key eliminata con successo",
+  "apikey-delete-confirm": "Elimina API key",
+  "apikey-delete-warning": "Eliminare una API key interromperà tutti i servizi che la utilizzano. Questa azione non può essere annullata.",
+  "apikey-description-placeholder": "Descrizione facile da ricordare della API key...",
+  "apikey-wont-be-able-to-see-again": "Non potrai vedere di nuovo questa API key. Salvala in un luogo sicuro, come un gestore di password o un archivio segreto.",
   "assertion_encryption": "Crittografia dell'asserzione",
+  "assistant": "Assistente",
   "assertion_signature": "Firma dell'asserzione",
   "assistant-deleted": "Assistente eliminato con successo",
   "assistant-description-field-placeholder": "Aggiungi una breve descrizione di cosa fa questo Assistente",
   "assistant-duplicated": "Assistente duplicato con successo",
-  "assistant-owner-updated": "Proprietario dell'assistente aggiornato con successo",
+  "assistant-owner-updated": "Proprietario dell'assistente modificato con successo",
   "assistant-successfully-created": "Assistente creato con successo",
-  "assistant-successfully-updated": "Assistente aggiornato con successo",
+  "assistant-successfully-updated": "Assistente modificato con successo",
   "assistants": "Assistenti",
   "audit-logs": "Registri di Audit",
   "auth-token": "Token di Autenticazione",
   "backend-deleted": "Backend eliminato con successo",
   "backend-successfully-created": "Backend creato con successo",
-  "backend-successfully-updated": "Backend aggiornato con successo",
+  "backend-successfully-updated": "Backend modificato con successo",
   "backend": "Backend",
   "backends": "Backends",
   "buy-now": "Acquista ora",
@@ -93,17 +96,17 @@
   "create_backend": "Crea backend",
   "create_connection": "Crea connessione",
   "create_new": "Crea nuovo",
-  "create_tool_field_apikey_label": "Chiave API",
-  "create_tool_field_apikey_placeholder": "Chiave API del server ChatGptRetrievalPlugin...",
+  "create_tool_field_apikey_label": "API key",
+  "create_tool_field_apikey_placeholder": "API key del server ChatGptRetrievalPlugin...",
   "create_tool_field_baseurl_label": "URL Base",
   "create_tool_field_baseurl_placeholder": "URL Base del server ChatGptRetrievalPlugin...",
   "create_tool_field_name_label": "Nome",
-  "create_tool_field_name_placeholder": "Nome visualizzato di questo strumento...",
-  "create_tool": "Crea strumento",
+  "create_tool_field_name_placeholder": "Nome visualizzato di questo tool...",
+  "create_tool": "Crea tool",
   "create_user": "Crea utente",
   "create-a-new-account": "Registrati",
   "create-account": "Crea Account",
-  "create-apikey": "Crea Chiave API",
+  "create-apikey": "Crea API key",
   "create-assistant": "Crea assistente",
   "create-backend": "Crea Backend",
   "create-connection": "Crea Connessione",
@@ -115,6 +118,7 @@
   "create-saml-connection": "Crea Connessione SAML",
   "create-workspace": "Crea Workspace",
   "created-at": "Creato il",
+  "credentials": "Credenziali",
   "current-password": "Password Attuale",
   "daily-usage": "Utilizzo Giornaliero",
   "dashboard": "Dashboard",
@@ -150,31 +154,31 @@
   "features": "Caratteristiche",
   "frequently-asked": "Domande frequenti",
   "gcpvertex-backend": "Gcp Vertex",
+  "general": "Generale",
   "get-started": "Inizia Ora",
   "hide-in-sidebar": "Nascondi nella barra laterale",
+  "instructions": "Istruzioni",
   "logiclecloud-backend": "Logicle Cloud",
   "hi": "Ciao",
   "id": "ID",
   "identity-provider-setup": "Trova i metadata SP per la configurazione dell'Identity Provider presso",
+  "insert_apikey_placeholder": "Inserisci un API key...",
   "insert_a_conversation_starter_placeholder": "Inserisci un inizio di conversazione...",
   "insert_a_tag_and_press_enter": "Inserisci un tag e premi invio",
   "insert_gcp_credentials_placeholder": "Inserisci le credenziali GCP...",
   "insert_openapi_spec_placeholder": "Inserisci una specifica YAML OpenAPI...",
   "invalid-credentials": "Credenziali di accesso non valide",
   "invite-create-account": "Per continuare, devi creare un nuovo account o accedere a un account esistente.",
-  "invocation_of_tool": "Invocazione dello strumento",
+  "invocation_of_tool": "Invocazione del tool",
   "knowledge": "Conoscenza",
-  "leave-workspace-confirmation": "Sei sicuro di voler lasciare il workspace? Perderai l'accesso a tutte le risorse e i dati associati.",
-  "leave-workspace-success": "Hai lasciato il workspace con successo.",
-  "leave-workspace": "Lascia Workspace",
-  "legal-disclaimer": "Logicle Chat può commettere errori. Considera di verificare informazioni importanti.",
+  "legal-disclaimer": "Logicle Chat può commettere errori. Verifica le informazioni importanti.",
   "localai-backend": "Server LocalAI",
   "login-error": "Si è verificato un problema con il tuo accesso.",
   "logout": "Disconnettiti",
   "manage-members": "Gestisci membri",
   "members-added": "Membri aggiunti con successo",
   "member-deleted": "Membro eliminato con successo.",
-  "member-role-updated": "Ruolo del membro aggiornato con successo.",
+  "member-role-updated": "Ruolo del membro modificato con successo.",
   "members-deleted": "Membri eliminati con successo.",
   "members-of-a-workspace": "I membri di un workspace hanno accesso ad aree specifiche, come una nuova release o una nuova funzionalità dell'applicazione.",
   "members": "Membri",
@@ -189,8 +193,8 @@
   "my-profile": "Il mio profilo",
   "name": "Nome",
   "new-api-key-description": "Le chiavi API consentono alla tua app di comunicare con l'API.",
-  "new-api-key": "Nuova Chiave API",
-  "new-api-warning": "Salva questa chiave API in un luogo sicuro. Non potrai rivederla una volta chiuso questo dialogo.",
+  "new-api-key": "Nuova API key",
+  "new-api-warning": "Salva questa API key in un luogo sicuro. Non potrai rivederla una volta chiuso questo dialogo.",
   "new-chat": "Nuova Chat",
   "new-chat-title": "Logicle Chat",
   "new-password": "Nuova Password",
@@ -199,7 +203,6 @@
   "no_such_user": "Utente non trovato",
   "no-active-workspace": "Non hai alcun workspace attivo.",
   "no-api-key-description": "Le chiavi API consentono alla tua app di comunicare con l'app",
-  "no-api-key-title": "Non hai ancora creato alcuna Chiave API",
   "no-credentials": "Credenziali non trovate.",
   "older": "Più vecchi",
   "openai-backend": "OpenAI",
@@ -208,8 +211,7 @@
   "parameters": "Parametri",
   "password-is-required": "Il campo Password è obbligatorio",
   "password-reset-link-sent": "Link per il reset della password inviato",
-  "password-successfully-updated": "Password aggiornata con successo",
-  "password-updated": "Password aggiornata con successo.",
+  "password-successfully-updated": "Password modificata con successo",
   "password": "Password",
   "preferences": "Preferenze",
   "preview": "Anteprima",
@@ -221,7 +223,7 @@
   "prompts": "Prompt",
   "provision": "Provisiona e de-provisiona utenti con il tuo provider di directory.",
   "public_display_name": "Il nome del backend",
-  "redirect-url": "URL di Reindirizzamento",
+  "redirect-url": "URL di reindirizzamento",
   "remove-assistant-confirmation": "Sei sicuro di voler rimuovere questo assistente? Questa azione non può essere annullata.",
   "remove-assistant": "Rimuovi Assistente",
   "remove-backend-confirmation": "Sei sicuro di voler eliminare il backend? Eliminare il backend eliminerà tutte le risorse e i dati associati per sempre.",
@@ -229,8 +231,8 @@
   "remove-chat-confirmation": "Sei sicuro di voler rimuovere questa chat? Questa azione non può essere annullata.",
   "remove-chat": "Rimuovi Chat",
   "remove-photo": "Rimuovi Foto",
-  "remove-tool-confirmation": "Sei sicuro di voler eliminare questo strumento? Eliminare lo strumento eliminerà tutte le risorse e i dati associati per sempre.",
-  "remove-tool": "Rimuovi Strumento",
+  "remove-tool-confirmation": "Sei sicuro di voler eliminare questo tool? Eliminare il tool eliminerà tutte le risorse e i dati associati per sempre.",
+  "remove-tool": "Rimuovi Tool",
   "remove-user-confirmation": "Sei sicuro di voler rimuovere questo utente? Questa azione non può essere annullata.",
   "remove-user": "Rimuovi Utente",
   "remove-workspace-confirmation": "Sei sicuro di voler eliminare il workspace? Eliminare il workspace eliminerà tutte le risorse e i dati associati per sempre.",
@@ -239,11 +241,11 @@
   "remove": "Rimuovi",
   "rename": "Rinomina",
   "reset-password": "Reimposta Password",
-  "revoke-api-key-confirm": "Sei sicuro di voler revocare questa Chiave API? Questa azione non può essere annullata.",
-  "revoke-api-key": "Revoca Chiave API",
+  "revoke-api-key-confirm": "Sei sicuro di voler revocare questa API key? Questa azione non può essere annullata.",
+  "revoke-api-key": "Revoca API key",
   "revoke": "Revoca",
   "role": "Ruolo",
-  "saml-config-updated": "Configurazione SAML aggiornata con successo.",
+  "saml-config-updated": "Configurazione SAML modificata con successo.",
   "saml-connection-established": "La connessione Single Sign-On è abilitata per il tuo workspace.",
   "save_and_submit": "Salva e Invia",
   "save-changes": "Salva Modifiche",
@@ -258,10 +260,11 @@
   "select_role": "Seleziona un ruolo",
   "select-members-to-add": "Seleziona membri del workspace",
   "send-magic-link": "Invia Magic Link",
-  "settings-successfully-updated": "Impostazioni aggiornate con successo",
+  "settings-successfully-updated": "Impostazioni modificate con successo",
   "settings": "Impostazioni",
   "setup-saml-auth": "Compila le informazioni di seguito per configurare l'autenticazione SAML per una maggiore sicurezza",
   "share_with_workspace": "Condividi con il workspace",
+  "sharing": "Condivisione",
   "show-in-sidebar": "Mostra nella barra laterale",
   "sign-in-with-email": "Accedi con Email",
   "sign-in-with-password": "Accedi con Password",
@@ -276,14 +279,15 @@
   "sp_saml_config_title": "Configurazione SAML del Service Provider (SP)",
   "sso-connection-deleted": "Connessione SSO eliminata con successo",
   "sso-connection-successfully-created": "Connessione SSO creata con successo",
-  "sso-connection-successfully-updated": "Connessione SSO aggiornata con successo",
+  "sso-connection-successfully-updated": "Connessione SSO modificata con successo",
   "start_from_here": "Inizia da qui",
+  "submit": "Invia",
   "successfully-joined": "Sei entrato con successo nel workspace.",
   "successfully-subscribed": "Ti sei iscritto con successo.",
   "system-prompt": "Istruzioni",
   "table-column-actions": "Azioni",
   "table-column-apiendpoint": "Endpoint API",
-  "table-column-apikey": "Chiave API",
+  "table-column-apikey": "API key",
   "table-column-backend": "Backend",
   "table-column-created-at": "Creato il",
   "table-column-description": "Descrizione",
@@ -294,7 +298,6 @@
   "table-column-owner": "Proprietario",
   "table-column-redirect-url": "URL di Reindirizzamento",
   "table-column-selected": "Selezionato",
-  "table-column-sharing": "Condivisione",
   "table-column-type": "Tipo",
   "table-column-user-role": "Ruolo",
   "tags": "Tag",
@@ -302,13 +305,14 @@
   "today": "Oggi",
   "togetherai-backend": "Together AI API",
   "token-limit": "Limite Token",
-  "tool-successfully-created": "Strumento creato con successo",
-  "tools": "Strumenti",
+  "tool-successfully-created": "Tool creato con successo",
+  "tools": "Tools",
   "unknown-error": "Errore sconosciuto",
-  "update-account": "Aggiorna Account",
-  "update-password": "Aggiorna Password",
+  "update-account": "Modifica Account",
+  "update-password": "Modifica Password",
   "url": "URL",
   "user-deleted": "Utente eliminato con successo",
+  "user": "Utente",
   "users": "Utenti",
   "workspace-connections": "Connessioni SSO del Workspace",
   "workspace-created": "Workspace creato con successo.",
@@ -320,7 +324,7 @@
   "workspace-name-placeholder": "Nome del Workspace",
   "workspace-not-found": "Workspace non trovato",
   "workspace-removed-successfully": "Workspace rimosso con successo.",
-  "workspace-successfully-updated": "Workspace aggiornato con successo",
+  "workspace-successfully-updated": "Workspace modificato con successo",
   "workspace-settings": "Impostazioni del Workspace",
   "workspace-slug-description": "Un ID univoco usato per identificare questo workspace negli URL.",
   "workspace-slug-label": "Slug",
