--- a/logicle/locales/en/common.json
+++ b/logicle/locales/en/common.json
@@ -4,9 +4,11 @@
   "acs-url": "ACS URL",
   "action": "Action",
   "active": "Active",
+  "active-tools": "Active tools",
   "add-connection": "Add Connection",
   "add-members": "Add Members",
   "add-user": "Add user",
+  "admin": "Admin",
   "administrator-settings": "Administrator settings",
   "all-assistants": "Assistants",
   "all-backends": "Backends",
@@ -21,18 +23,19 @@
   "analytics": "Analytics",
   "anthropic-backend": "Anthropic API",
   "api_endpoint_placeholder": "Enter your api endpoint",
-  "api_key_placeholder": "Enter the api key to access the LLM APIs",
-  "api-key": "API Key",
-  "api-keys": "API Keys",
+  "api_key_placeholder": "Enter the API key to access the LLM APIs",
+  "api-key": "API key",
+  "api-keys": "API keys",
   "apikey-added": "API key added successfully",
   "apikey-created": "API key created",
   "apikey-deleted": "API key deleted successfully",
-  "apikey-delete-confirm": "Delete Api Key",
+  "apikey-delete-confirm": "Delete Api key",
   "apikey-delete-warning": "Deleting an api key will disrupt all services using it. This action cannot be undone.",
   "apikey-description-placeholder": "Easy to remember description of the Api Key...",
   "apikey-wont-be-able-to-see-again": "You won't be able to see this API key again. Store it in a secure place, such as a password manager or secret store",
   "assertion_encryption": "Assertion Encryption",
   "assertion_signature": "Assertion Signature",
+  "assistant": "Assistant",
   "assistant-deleted": "Assistant successfully deleted",
   "assistant-description-field-placeholder": "Add a short description of what this Assistant does",
   "assistant-duplicated": "Assistant successfully duplicated",
@@ -103,7 +106,7 @@
   "create_user": "Create user",
   "create-a-new-account": "Sign up",
   "create-account": "Create Account",
-  "create-apikey": "Create API Key",
+  "create-apikey": "Create API key",
   "create-assistant": "Create assistant",
   "create-backend": "Create Backend",
   "create-connection": "Create Connection",
@@ -115,6 +118,7 @@
   "create-saml-connection": "Create SAML Connection",
   "create-workspace": "Create Workspace",
   "created-at": "Created At",
+  "credentials": "Credentials",
   "current-password": "Current Password",
   "daily-usage": "Daily Usage",
   "dashboard": "Dashboard",
@@ -149,6 +153,7 @@
   "events-to-send": "Events to send",
   "features": "Features",
   "frequently-asked": "Frequently asked questions",
+  "general": "General",
   "gcpvertex-backend": "Gcp Vertex",
   "get-started": "Get Started",
   "hide-in-sidebar": "Hide in sidebar",
@@ -156,17 +161,16 @@
   "hi": "Hi",
   "id": "Id",
   "identity-provider-setup": "Please find the SP metadata for Identity Provider configuration at",
+  "insert_apikey_placeholder": "Insert an API key...",
   "insert_a_conversation_starter_placeholder": "Insert a conversation starter...",
   "insert_a_tag_and_press_enter": "Insert a tag and press enter",
   "insert_gcp_credentials_placeholder": "Insert GCP Credentials...",
   "insert_openapi_spec_placeholder": "Insert a YAML OpenAPI spec...",
+  "instructions": "Instructions",
   "invalid-credentials": "Invalid login credentials",
   "invite-create-account": "To continue, you must either create a new account or login to an existing account.",
   "invocation_of_tool": "Invocation of tool",
   "knowledge": "Knowledge",
-  "leave-workspace-confirmation": "Are you sure you want to leave the workspace? You'll lose access to all resources and data associated with the workspace.",
-  "leave-workspace-success": "You have left the workspace successfully.",
-  "leave-workspace": "Leave Workspace",
   "legal-disclaimer": "Logicle Chat can make mistakes. Consider checking important information.",
   "localai-backend": "LocalAI Server",
   "login-error": "There was a problem with your login.",
@@ -189,7 +193,7 @@
   "my-profile": "My profile",
   "name": "Name",
   "new-api-key-description": "API keys allow your app to communicate the API.",
-  "new-api-key": "New API Key",
+  "new-api-key": "New API key",
   "new-api-warning": "Save this API key somewhere safe. You won't be able to see it again once you close this dialog.",
   "new-chat": "New chat",
   "new-chat-title": "Logicle Chat",
@@ -198,8 +202,7 @@
   "new-workspace": "New Workspace",
   "no_such_user": "No such user",
   "no-active-workspace": "You do not have any active workspace.",
-  "no-api-key-description": "API Keys allow your app to communicate with app",
-  "no-api-key-title": "You haven't created any API Keys yet",
+  "no-api-key-description": "API keys allow your app to communicate with app",
   "no-credentials": "No credentials found.",
   "older": "Older",
   "openai-backend": "OpenAI",
@@ -209,7 +212,6 @@
   "password-is-required": "The Password field is required",
   "password-reset-link-sent": "Password reset link sent",
   "password-successfully-updated": "Password has been successfully updated",
-  "password-updated": "Password updated successfully.",
   "password": "Password",
   "preferences": "Preferences",
   "preview": "Preview",
@@ -239,8 +241,8 @@
   "remove": "Remove",
   "rename": "Rename",
   "reset-password": "Reset Password",
-  "revoke-api-key-confirm": "Are you sure you want to revoke this API Key? This action can not be undone.",
-  "revoke-api-key": "Revoke API Key",
+  "revoke-api-key-confirm": "Are you sure you want to revoke this API key? This action can not be undone.",
+  "revoke-api-key": "Revoke API key",
   "revoke": "Revoke",
   "role": "Role",
   "saml-config-updated": "SAML Config updated successfully.",
@@ -262,6 +264,7 @@
   "settings": "Settings",
   "setup-saml-auth": "Fill out the information below to set up SAML authentication for added security",
   "share_with_workspace": "Share with workspace",
+  "sharing": "Sharing",
   "show-in-sidebar": "Show in sidebar",
   "sign-in-with-email": "Sign in with Email",
   "sign-in-with-password": "Sign in with Password",
@@ -278,12 +281,13 @@
   "sso-connection-successfully-created": "SSO connection has been successfully created",
   "sso-connection-successfully-updated": "SSO connection has been successfully updated",
   "start_from_here": "Start from here",
+  "submit": "Submit",
   "successfully-joined": "You have successfully joined the workspace.",
   "successfully-subscribed": "You have successfully subscribed.",
   "system-prompt": "Instructions",
   "table-column-actions": "Actions",
   "table-column-apiendpoint": "API Endpoint",
-  "table-column-apikey": "API Key",
+  "table-column-apikey": "API key",
   "table-column-backend": "Backend",
   "table-column-created-at": "Created At",
   "table-column-description": "Description",
@@ -294,7 +298,6 @@
   "table-column-owner": "Owner",
   "table-column-redirect-url": "Redirect URL",
   "table-column-selected": "Selected",
-  "table-column-sharing": "Sharing",
   "table-column-type": "Type",
   "table-column-user-role": "Role",
   "tags": "Tags",
@@ -308,6 +311,7 @@
   "update-account": "Update Account",
   "update-password": "Update Password",
   "url": "URL",
+  "user": "User",
   "user-deleted": "User successfully deleted",
   "users": "Users",
   "workspace-connections": "Workspace SSO Connections",
