--- a/logicle/locales/en/logicle.json
+++ b/logicle/locales/en/logicle.json
@@ -38,6 +38,7 @@
   "assistant": "Assistant",
   "assistant-deleted": "Assistant successfully deleted",
   "assistant-description-field-placeholder": "Add a short description of what this Assistant does",
+  "assistant-details": "Assistant details",
   "assistant-duplicated": "Assistant successfully duplicated",
   "assistant-owner-updated": "The assistant owner has been successfully updated",
   "assistant-successfully-created": "Assistant has been successfully created",
@@ -128,6 +129,7 @@
   "delete-sso-connection": "Delete SSO Connection",
   "delete": "Delete",
   "description": "Description",
+  "details": "Details",
   "directory-connection-created": "Directory connection successfully.",
   "directory-name-placeholder": "Example Directory",
   "directory-name": "Directory Name",
@@ -161,6 +163,7 @@
   "hi": "Hi",
   "id": "Id",
   "identity-provider-setup": "Please find the SP metadata for Identity Provider configuration at",
+  "informations": "Informations",
   "insert_apikey_placeholder": "Insert an API key...",
   "insert_a_conversation_starter_placeholder": "Insert a conversation starter...",
   "insert_a_tag_and_press_enter": "Insert a tag and press enter",
