--- a/logicle/locales/it/logicle.json
+++ b/logicle/locales/it/logicle.json
@@ -38,6 +38,7 @@
   "assertion_signature": "Firma dell'asserzione",
   "assistant-deleted": "Assistente eliminato con successo",
   "assistant-description-field-placeholder": "Aggiungi una breve descrizione di cosa fa questo Assistente",
+  "assistant-details": "Dettagli assistente",
   "assistant-duplicated": "Assistente duplicato con successo",
   "assistant-owner-updated": "Proprietario dell'assistente modificato con successo",
   "assistant-successfully-created": "Assistente creato con successo",
@@ -128,6 +129,7 @@
   "delete-sso-connection": "Elimina Connessione SSO",
   "delete": "Elimina",
   "description": "Descrizione",
+  "details": "Dettagli",
   "directory-connection-created": "Connessione directory creata con successo.",
   "directory-name-placeholder": "Esempio Directory",
   "directory-name": "Nome Directory",
@@ -162,6 +164,7 @@
   "hi": "Ciao",
   "id": "ID",
   "identity-provider-setup": "Trova i metadata SP per la configurazione dell'Identity Provider presso",
+  "informations": "Informazioni",
   "insert_apikey_placeholder": "Inserisci un API key...",
   "insert_a_conversation_starter_placeholder": "Inserisci un inizio di conversazione...",
   "insert_a_tag_and_press_enter": "Inserisci un tag e premi invio",
