AssistantDetails title + placeholder empty prompt

--- a/logicle/locales/en/logicle.json
+++ b/logicle/locales/en/logicle.json
@@ -146,6 +146,7 @@
   "email-password-reset-link": "Email Password Reset Link",
   "email-placeholder": "example@logicle.ai",
   "email": "Email",
+  "empty-instructions": "Empty instructions",
   "enable_signup": "Enable Signup",
   "enable": "Enable",
   "enter_password": "Enter password",
@@ -211,6 +212,7 @@
   "openai-backend": "OpenAI",
   "openapi_spec": "OpenAPI spec",
   "or-sign-in-with": "Or Sign In With",
+  "owner": "Owner",
   "parameters": "Parameters",
   "password-is-required": "The Password field is required",
   "password-reset-link-sent": "Password reset link sent",
