--- a/logicle/locales/it/logicle.json
+++ b/logicle/locales/it/logicle.json
@@ -146,6 +146,7 @@
   "email-password-reset-link": "Invia Link di Reimpostazione Password",
   "email-placeholder": "esempio@logicle.ai",
   "email": "Email",
+  "empty-instructions": "Istruzioni non definite",
   "enable_signup": "Abilita Registrazione",
   "enable": "Abilita",
   "enter_password": "Inserisci la password",
@@ -211,6 +212,7 @@
   "openai-backend": "OpenAI",
   "openapi_spec": "Specifica OpenAPI",
   "or-sign-in-with": "Oppure Accedi Con",
+  "owner": "Proprietario",
   "parameters": "Parametri",
   "password-is-required": "Il campo Password è obbligatorio",
   "password-reset-link-sent": "Link per il reset della password inviato",
