User assistant details (#289)
* Rough implementation of a dialog box with assistant properties

* AssistantDetails title + placeholder empty prompt

* Migrate Assistants to plain typescript functions

--- a/logicle/locales/en/logicle.json
+++ b/logicle/locales/en/logicle.json
@@ -38,6 +38,7 @@
   "assistant": "Assistant",
   "assistant-deleted": "Assistant successfully deleted",
   "assistant-description-field-placeholder": "Add a short description of what this Assistant does",
+  "assistant-details": "Assistant details",
   "assistant-duplicated": "Assistant successfully duplicated",
   "assistant-owner-updated": "The assistant owner has been successfully updated",
   "assistant-successfully-created": "Assistant has been successfully created",
@@ -128,6 +129,7 @@
   "delete-sso-connection": "Delete SSO Connection",
   "delete": "Delete",
   "description": "Description",
+  "details": "Details",
   "directory-connection-created": "Directory connection successfully.",
   "directory-name-placeholder": "Example Directory",
   "directory-name": "Directory Name",
@@ -144,6 +146,7 @@
   "email-password-reset-link": "Email Password Reset Link",
   "email-placeholder": "example@logicle.ai",
   "email": "Email",
+  "empty-instructions": "Empty instructions",
   "enable_signup": "Enable Signup",
   "enable": "Enable",
   "enter_password": "Enter password",
@@ -161,6 +164,7 @@
   "hi": "Hi",
   "id": "Id",
   "identity-provider-setup": "Please find the SP metadata for Identity Provider configuration at",
+  "informations": "Informations",
   "insert_apikey_placeholder": "Insert an API key...",
   "insert_a_conversation_starter_placeholder": "Insert a conversation starter...",
   "insert_a_tag_and_press_enter": "Insert a tag and press enter",
@@ -208,6 +212,7 @@
   "openai-backend": "OpenAI",
   "openapi_spec": "OpenAPI spec",
   "or-sign-in-with": "Or Sign In With",
+  "owner": "Owner",
   "parameters": "Parameters",
   "password-is-required": "The Password field is required",
   "password-reset-link-sent": "Password reset link sent",
