More accurate linting (and i18n linting!) (#310)
* Migrate to eslint 9

* I18n fixes

* Forgot file

* Fix linting errors (included i18n)

* Removed dead code

* Fix wrong i18next usage

* Removed unneeded i18n entries

* Use recommended config for eslint

--- a/logicle/locales/en/logicle.json
+++ b/logicle/locales/en/logicle.json
@@ -55,7 +55,8 @@
   "cancel": "Cancel",
   "cant_create_assistant_if_no_backend": "Can't create an assistant if no backend is defined",
   "change_owner": "Change owner",
-  "change-password": "Change Password",
+  "change-password": "Change password",
+  "change_role": "Change role",
   "chat": "Chat",
   "choose-new-provider-type-description": "Choose the type of LLM provider for the new backend",
   "choose-new-provider-type": "Choose the provider type",
@@ -138,6 +139,7 @@
   "directory-sync": "Directory Sync",
   "discovery-url": "Discovery URL",
   "dont-have-an-account": "Don't have an account?",
+  "do_you_want_to_recover_an_unsaved_version": "Do you want to recover an unsaved version?",
   "duplicate": "Duplicate",
   "edit_role": "Edit role",
   "edit": "Edit",
@@ -154,7 +156,9 @@
   "entity-id": "Entity ID",
   "events-description": "You can choose which events are sent to which endpoint. By default, all messages are sent to all endpoints.",
   "events-to-send": "Events to send",
+  "everyone_in_the_company": "Everyone in the company",
   "features": "Features",
+  "found_an_unsaved_version": "Found an unsaved version",
   "frequently-asked": "Frequently asked questions",
   "general": "General",
   "gcpvertex-backend": "Gcp Vertex",
@@ -164,6 +168,7 @@
   "hi": "Hi",
   "id": "Id",
   "identity-provider-setup": "Please find the SP metadata for Identity Provider configuration at",
+  "important_logicle_is_100%_unaffiliated_with_openai": "Important: Logicle is 100% unaffiliated with OpenAI",
   "informations": "Informations",
   "insert_apikey_placeholder": "Insert an API key...",
   "insert_a_conversation_starter_placeholder": "Insert a conversation starter...",
@@ -208,7 +213,9 @@
   "no-active-workspace": "You do not have any active workspace.",
   "no-api-key-description": "API keys allow your app to communicate with app",
   "no-credentials": "No credentials found.",
+  "none": "None",
   "older": "Older",
+  "only-me": "Only me",
   "openai-backend": "OpenAI",
   "openapi_spec": "OpenAPI spec",
   "or-sign-in-with": "Or Sign In With",
@@ -228,6 +235,7 @@
   "prompts": "Prompts",
   "provision": "Provision and de-provision users with your directory provider.",
   "public_display_name": "The name of the backend",
+  "recover": "Recover",
   "redirect-url": "Redirect URL",
   "remove-assistant-confirmation": "Are you sure you want to remove this assistant? This action cannot be undone",
   "remove-assistant": "Remove assistant",
@@ -268,6 +276,7 @@
   "settings-successfully-updated": "Settings have been successfully updated",
   "settings": "Settings",
   "setup-saml-auth": "Fill out the information below to set up SAML authentication for added security",
+  "share": "Share",
   "share_with_workspace": "Share with workspace",
   "sharing": "Sharing",
   "show-in-sidebar": "Show in sidebar",
@@ -307,11 +316,13 @@
   "table-column-user-role": "Role",
   "tags": "Tags",
   "temperature": "Temperature",
+  "the_system": "The sistem",
   "today": "Today",
   "togetherai-backend": "Together AI API",
   "token-limit": "Token Limit",
   "tool-successfully-created": "Tool has been successfully created",
   "tools": "Tools",
+  "type": "Type",
   "unknown-error": "Unknown Error",
   "update-account": "Update Account",
   "update-password": "Update Password",
@@ -319,6 +330,7 @@
   "user": "User",
   "user-deleted": "User successfully deleted",
   "users": "Users",
+  "welcome_to_logicle": "Welcome to Logicle",
   "workspace-connections": "Workspace SSO Connections",
   "workspace-created": "Workspace created successfully.",
   "workspace-deleted": "Workspace deleted successfully",
