--- a/logicle/locales/it/logicle.json
+++ b/logicle/locales/it/logicle.json
@@ -55,7 +55,8 @@
   "cancel": "Annulla",
   "cant_create_assistant_if_no_backend": "Non è possibile creare un assistente se non è definito un backend",
   "change_owner": "Cambia proprietario",
-  "change-password": "Cambia Password",
+  "change-password": "Cambia password",
+  "change_role": "Cambia ruolo",
   "chat": "Chat",
   "choose-new-provider-type-description": "Scegli il tipo di provider LLM per il nuovo backend",
   "choose-new-provider-type": "Scegli il tipo di provider",
@@ -137,6 +138,7 @@
   "directory-sync-provider": "Provider di Sincronizzazione Directory",
   "directory-sync": "Sincronizzazione Directory",
   "discovery-url": "URL di Scoperta",
+  "do_you_want_to_recover_an_unsaved_version": "Vuoi recuperare una versione non salvata?",
   "dont-have-an-account": "Non hai un account?",
   "duplicate": "Duplica",
   "edit_role": "Modifica ruolo",
@@ -154,7 +156,9 @@
   "entity-id": "ID Entità",
   "events-description": "Puoi scegliere quali eventi inviare a quali endpoint. Per impostazione predefinita, tutti i messaggi vengono inviati a tutti gli endpoint.",
   "events-to-send": "Eventi da inviare",
+  "everyone_in_the_company": "Tutta l'azienda",
   "features": "Caratteristiche",
+  "found_an_unsaved_version": "Ho trovato una versione salvata",
   "frequently-asked": "Domande frequenti",
   "gcpvertex-backend": "Gcp Vertex",
   "general": "Generale",
@@ -165,6 +169,7 @@
   "hi": "Ciao",
   "id": "ID",
   "identity-provider-setup": "Trova i metadata SP per la configurazione dell'Identity Provider presso",
+  "important_logicle_is_100%_unaffiliated_with_openai": "Importante: Logicle è al 100% non affiliata con OpenAI",
   "informations": "Informazioni",
   "insert_apikey_placeholder": "Inserisci un API key...",
   "insert_a_conversation_starter_placeholder": "Inserisci un inizio di conversazione...",
@@ -208,7 +213,9 @@
   "no-active-workspace": "Non hai alcun workspace attivo.",
   "no-api-key-description": "Le chiavi API consentono alla tua app di comunicare con l'app",
   "no-credentials": "Credenziali non trovate.",
+  "none": "Nessuno",
   "older": "Più vecchi",
+  "only-me": "Solo io",
   "openai-backend": "OpenAI",
   "openapi_spec": "Specifica OpenAPI",
   "or-sign-in-with": "Oppure Accedi Con",
@@ -228,6 +235,7 @@
   "prompts": "Prompt",
   "provision": "Provisiona e de-provisiona utenti con il tuo provider di directory.",
   "public_display_name": "Il nome del backend",
+  "recover": "Recupera",
   "redirect-url": "URL di reindirizzamento",
   "remove-assistant-confirmation": "Sei sicuro di voler rimuovere questo assistente? Questa azione non può essere annullata.",
   "remove-assistant": "Rimuovi Assistente",
@@ -268,6 +276,7 @@
   "settings-successfully-updated": "Impostazioni modificate con successo",
   "settings": "Impostazioni",
   "setup-saml-auth": "Compila le informazioni di seguito per configurare l'autenticazione SAML per una maggiore sicurezza",
+  "share": "Condividi",
   "share_with_workspace": "Condividi con il workspace",
   "sharing": "Condivisione",
   "show-in-sidebar": "Mostra nella barra laterale",
@@ -307,11 +316,13 @@
   "table-column-user-role": "Ruolo",
   "tags": "Tag",
   "temperature": "Temperatura",
+  "the_system": "Il sistema",
   "today": "Oggi",
   "togetherai-backend": "Together AI API",
   "token-limit": "Limite Token",
   "tool-successfully-created": "Tool creato con successo",
   "tools": "Tools",
+  "type": "Tipo",
   "unknown-error": "Errore sconosciuto",
   "update-account": "Modifica Account",
   "update-password": "Modifica Password",
@@ -319,6 +330,7 @@
   "user-deleted": "Utente eliminato con successo",
   "user": "Utente",
   "users": "Utenti",
+  "welcome_to_logicle": "Benvenuto in logicle",
   "workspace-connections": "Connessioni SSO del Workspace",
   "workspace-created": "Workspace creato con successo.",
   "workspace-deleted": "Workspace eliminato con successo",
