--- a/logicle/locales/it/logicle.json
+++ b/logicle/locales/it/logicle.json
@@ -157,6 +157,8 @@
   "events-description": "Puoi scegliere quali eventi inviare a quali endpoint. Per impostazione predefinita, tutti i messaggi vengono inviati a tutti gli endpoint.",
   "events-to-send": "Eventi da inviare",
   "everyone_in_the_company": "Tutta l'azienda",
+  "failed_sending_message": "Errore nell'invio del messaggio",
+  "failed_sending_message_not_authorized": "Non sei autorizzato ad aggiungere messaggi a questa conversazione",
   "features": "Caratteristiche",
   "found_an_unsaved_version": "Ho trovato una versione salvata",
   "frequently-asked": "Domande frequenti",
