--- a/logicle/locales/en/logicle.json
+++ b/logicle/locales/en/logicle.json
@@ -158,8 +158,10 @@
   "events-description": "You can choose which events are sent to which endpoint. By default, all messages are sent to all endpoints.",
   "events-to-send": "Events to send",
   "everyone_in_the_company": "Everyone in the company",
+  "failed_creating_link": "Failed creating link",
   "failed_sending_message": "Failed sending message",
   "failed_sending_message_not_authorized": "You're not authorized to add messages to this conversation",
+  "failed_updating_links": "Failed updating links",
   "features": "Features",
   "found_an_unsaved_version": "Found an unsaved version",
   "frequently-asked": "Frequently asked questions",
@@ -185,6 +187,8 @@
   "knowledge": "Knowledge",
   "legal-disclaimer": "Logicle Chat can make mistakes. Consider checking important information.",
   "localai-backend": "LocalAI Server",
+  "link_created": "Link created",
+  "links_updated": "Links updated",
   "login-error": "There was a problem with your login.",
   "logout": "Logout",
   "manage-members": "Manage members",
