--- a/logicle/locales/it/logicle.json
+++ b/logicle/locales/it/logicle.json
@@ -158,8 +158,10 @@
   "events-description": "Puoi scegliere quali eventi inviare a quali endpoint. Per impostazione predefinita, tutti i messaggi vengono inviati a tutti gli endpoint.",
   "events-to-send": "Eventi da inviare",
   "everyone_in_the_company": "Tutta l'azienda",
+  "failed_creating_link": "Errore nella creazione del link",
   "failed_sending_message": "Errore nell'invio del messaggio",
   "failed_sending_message_not_authorized": "Non sei autorizzato ad aggiungere messaggi a questa conversazione",
+  "failed_updating_links": "Errore nell'aggiornamento dei link",
   "features": "Caratteristiche",
   "found_an_unsaved_version": "Ho trovato una versione salvata",
   "frequently-asked": "Domande frequenti",
@@ -184,6 +186,8 @@
   "invocation_of_tool": "Invocazione del tool",
   "knowledge": "Conoscenza",
   "legal-disclaimer": "Logicle Chat può commettere errori. Verifica le informazioni importanti.",
+  "link_created": "Link creato",
+  "links_updated": "Links aggiornati",
   "localai-backend": "Server LocalAI",
   "login-error": "Si è verificato un problema con il tuo accesso.",
   "logout": "Disconnettiti",
