--- a/logicle/locales/it/logicle.json
+++ b/logicle/locales/it/logicle.json
@@ -58,6 +58,7 @@
   "change-password": "Cambia password",
   "change_role": "Cambia ruolo",
   "chat": "Chat",
+  "chat_is_already_shared": "La conversazione è condivisa",
   "chat_response_failure": "Si è verificato un errore durante la ricezione della risposta",
   "choose-new-provider-type-description": "Scegli il tipo di provider LLM per il nuovo backend",
   "choose-new-provider-type": "Scegli il tipo di provider",
@@ -67,6 +68,7 @@
   "client-secret": "Segreto Cliente",
   "close": "Chiudi",
   "coming-soon": "Prossimamente",
+  "configure_assistant_before_sending_messages": "Configura l'assistente prima di inviare messaggi",
   "configure-singlesignon": "SAML Single Sign-On",
   "configure": "Configura",
   "confirm-delete-member": "Rimuovi dal workspace",
@@ -79,8 +81,9 @@
   "continue-with-github": "Continua con GitHub",
   "continue-with-google": "Continua con Google",
   "continue-with-saml-sso": "Continua con SAML SSO",
-  "configure_assistant_before_sending_messages": "Configura l'assistente prima di inviare messaggi",
   "conversations": "Conversazioni",
+  "conversation_is_not_currently_shared": "La conversazione non è al momento condivisa",
+  "conversation_sharing": "Condivisione conversazione",
   "conversation_starters": "Iniziatori di conversazione",
   "copied-to-clipboard": "Copiato negli appunti",
   "copy-paste-metadata": "Copia e incolla qui il Metadata XML.",
@@ -98,6 +101,7 @@
   "create_assistant": "Crea assistente",
   "create_backend": "Crea backend",
   "create_connection": "Crea connessione",
+  "create_link": "Crea link",
   "create_new": "Crea nuovo",
   "create_tool_field_apikey_label": "API key",
   "create_tool_field_apikey_placeholder": "API key del server ChatGptRetrievalPlugin...",
@@ -332,6 +336,7 @@
   "type": "Tipo",
   "unknown-error": "Errore sconosciuto",
   "update-account": "Modifica Account",
+  "update_links": "Aggiorna link",
   "update-password": "Modifica Password",
   "url": "URL",
   "user-deleted": "Utente eliminato con successo",
