--- a/logicle/locales/en/logicle.json
+++ b/logicle/locales/en/logicle.json
@@ -58,6 +58,7 @@
   "change-password": "Change password",
   "change_role": "Change role",
   "chat": "Chat",
+  "chat_is_already_shared": "Chat is shared",
   "chat_response_failure": "An error happened while reading the server response",
   "choose-new-provider-type-description": "Choose the type of LLM provider for the new backend",
   "choose-new-provider-type": "Choose the provider type",
@@ -67,6 +68,7 @@
   "client-secret": "Client Secret",
   "close": "Close",
   "coming-soon": "Coming Soon",
+  "configure_assistant_before_sending_messages": "Configure assistant before sending messages",
   "configure-singlesignon": "SAML Single Sign-On",
   "configure": "Configure",
   "confirm-delete-member": "Remove from workspace",
@@ -79,8 +81,9 @@
   "continue-with-github": "Continue with GitHub",
   "continue-with-google": "Continue with Google",
   "continue-with-saml-sso": "Continue with SAML SSO",
-  "configure_assistant_before_sending_messages": "Configure assistant before sending messages",
   "conversations": "Conversations",
+  "conversation_is_not_currently_shared": "Conversation is not currently shared",
+  "conversation_sharing": "Conversation sharing",
   "conversation_starters": "Conversation starters",
   "copied-to-clipboard": "Copied to clipboard",
   "copy-paste-metadata": "Copy and paste Metadata XML here.",
@@ -116,6 +119,7 @@
   "create-directory-connection": "Create Directory Connection",
   "create-directory-message": "Automatically provision and de-provision users with your directory provider.",
   "create-directory": "Create Directory",
+  "create_link": "Create link",
   "create-new-assistant": "Create a new assistant",
   "create-oidc-connection": "Create OIDC Connection",
   "create-saml-connection": "Create SAML Connection",
@@ -158,8 +162,10 @@
   "events-description": "You can choose which events are sent to which endpoint. By default, all messages are sent to all endpoints.",
   "events-to-send": "Events to send",
   "everyone_in_the_company": "Everyone in the company",
+  "failed_creating_link": "Failed creating link",
   "failed_sending_message": "Failed sending message",
   "failed_sending_message_not_authorized": "You're not authorized to add messages to this conversation",
+  "failed_updating_links": "Failed updating links",
   "features": "Features",
   "found_an_unsaved_version": "Found an unsaved version",
   "frequently-asked": "Frequently asked questions",
@@ -185,6 +191,8 @@
   "knowledge": "Knowledge",
   "legal-disclaimer": "Logicle Chat can make mistakes. Consider checking important information.",
   "localai-backend": "LocalAI Server",
+  "link_created": "Link created",
+  "links_updated": "Links updated",
   "login-error": "There was a problem with your login.",
   "logout": "Logout",
   "manage-members": "Manage members",
@@ -328,6 +336,7 @@
   "type": "Type",
   "unknown-error": "Unknown Error",
   "update-account": "Update Account",
+  "update_links": "Update links",
   "update-password": "Update Password",
   "url": "URL",
   "user": "User",
