--- a/logicle/locales/it/logicle.json
+++ b/logicle/locales/it/logicle.json
@@ -141,6 +141,7 @@
   "discovery-url": "URL di Scoperta",
   "do_you_want_to_recover_an_unsaved_version": "Vuoi recuperare una versione non salvata?",
   "dont-have-an-account": "Non hai un account?",
+  "drop_files_here_or_browse_for_file_upload": "Trascina qui file o <0>sfoglia</0> per upload file",
   "duplicate": "Duplica",
   "edit_role": "Modifica ruolo",
   "edit": "Modifica",
