Using cards for assistant tools panel choice

--- a/logicle/locales/en/logicle.json
+++ b/logicle/locales/en/logicle.json
@@ -7,6 +7,7 @@
   "active-tools": "Active tools",
   "add-connection": "Add Connection",
   "add-members": "Add Members",
+  "add-tool": "Add tool",
   "add-user": "Add user",
   "admin": "Admin",
   "administrator-settings": "Administrator settings",
