Removed tool description, not clear if wanted

--- a/logicle/locales/en/logicle.json
+++ b/logicle/locales/en/logicle.json
@@ -7,7 +7,7 @@
   "active-tools": "Active tools",
   "add-connection": "Add Connection",
   "add-members": "Add Members",
-  "add-tool": "Add tool",
+  "add-tools": "Add tools",
   "add-user": "Add user",
   "admin": "Admin",
   "administrator-settings": "Administrator settings",
