--- a/logicle/locales/it/logicle.json
+++ b/logicle/locales/it/logicle.json
@@ -7,7 +7,7 @@
   "active-tools": "Tool attivi",
   "add-connection": "Aggiungi Connessione",
   "add-members": "Aggiungi Membri",
-  "add-tool": "Aggiunti tool",
+  "add-tools": "Aggiungi tool",
   "add-user": "Aggiungi Utente",
   "admin": "Amministratore",
   "administrator-settings": "Impostazioni Amministratore",
