Using new Tool.capability

--- a/logicle/locales/en/logicle.json
+++ b/logicle/locales/en/logicle.json
@@ -5,6 +5,7 @@
   "action": "Action",
   "active": "Active",
   "active-tools": "Active tools",
+  "add": "Add",
   "add-connection": "Add Connection",
   "add-members": "Add Members",
   "add-tools": "Add tools",
@@ -281,6 +282,7 @@
   "select_role_placeholder": "Select a role...",
   "select_role": "Select a role",
   "select-members-to-add": "Select workspace members",
+  "select-tools-to-add": "Select tools to add",
   "send-magic-link": "Send Magic Link",
   "settings-successfully-updated": "Settings have been successfully updated",
   "settings": "Settings",
